done NhanVien and chuyende

--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,11 @@
         <exec.mainClass>com.mycompany.sof2041.SOF2041</exec.mainClass>
     </properties>
     <name>SOF2041</name>
+    <dependencies>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.8.1.jre11</version>
+        </dependency>
+    </dependencies>
 </project>
